# e-ink

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: install-apod-timer.sh  install.sh  uninstall.sh
src/einkd/: __init__.py  apod.py  cli.py  display.py
systemd/: eink-apod.service  eink-apod.timer  eink.service
